Fix polishing of water rendering